# sugar-datastore

./: .gitignore  AUTHORS  HACKING  Makefile  Makefile.am  NEWS  NOTES.txt  README  README.md  README.txt  autogen.sh  build-snapshot.sh  configure.ac  maint-helper.py  setup.py  sweets.recipe
.sweets/: config.git
docs/: Makefile  getbuildpath.py  requirements.txt  writedocs.py
etc/: Makefile.am  org.laptop.Sugar.Datastore.in  org.laptop.sugar.DataStore.service  org.laptop.sugar.DataStore.service.in  org.laptop.sugar.Indexer.service.in
secore/: Makefile.am  datastructures.py  indexerconnection.py
src/: Makefile.am  __init__.py
src/carquinyol/: Makefile.am  datastore.py  filestore.py  indexstore.py  layoutmanager.py  metadatareader.c  metadatastore.py  migration.py  optimizer.py
src/olpc/: Makefile.am  __init__.py
src/olpc.datastore.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/olpc/datastore/: Makefile.am  __init__.py  __version__.py  backingstore.py  bin_copy.py  config.py  converter.py  datastore.py  dbus_helpers.py  deltastream.py  filestore.py  hg_backingstore.py  indexer.py  indexstore.py  layoutmanager.py  lru.py  metadatareader.c  metadatastore.py  migration.py  model.py  optimizer.py  query.py  sxattr.py  utils.py  xapianindex.py
tests/: Makefile  __init__.py  cleaner.py  dateranges.txt  funkyabi.odt  milestone_1.txt  milestone_2.txt  mountpoints.txt  properties.txt  query.txt  runalltests.py  simple_versions.txt  sugar_demo_may17.txt  test.doc  test.odt  test_backingstore.py  test_conversion.py  test_hgrepo.py  test_model.py  test_perf.py  test_sugar.py  test_xapianindex.py  testutils.py  usage.txt  web_data.json  xapianindex.txt
